# santander-customer-transaction-app

./: .coveragerc  .dockerignore  .gitignore  .pylintrc  Dockerfile  LICENSE  LICENSE.md  Makefile  README.md  app.py  pyproject.toml  pytest.ini  requirements-unittest.txt  requirements.txt  streamlit_app.py
.github/workflows/: cicd-pipeline.yaml  hf-deployment.yaml  pipeline.yaml
api/: app.py
app/server/: main.py
app/tests/: test_app.py
config/: server.yaml
docs/: README.md
ml/: create_folds.py  dispatcher.py  metrics.py  predict.py  train.py
myflaskapp/: main.py
myflaskapp/app/: __init__.py
myflaskapp/core/: __init__.py
myflaskapp/tests/: test_routes.py
notebooks/: exploratory_data_analysis.ipynb  model_evaluation.ipynb
server/: __main__.py  app.py
server/core/: config.py  model_loader.py
server/routers/api_v1/: api.py
server/routers/api_v1/endpoints/: inference.py
server/static/css/: styles.css
server/static/js/: scripts.js
server/templates/: index.html
staged/: clf.pkl
tests/: test_app.py  test_data.csv
utils/: check_hash.py  config_reader.py
